<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <!-- CAPTURE SETTINGS -->

        <TextView
            android:id="@+id/cap_setting_heading_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cap_settings_title"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="@color/heading_2"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_cap_time_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cap_time_interval"
                android:textColor="@color/heading_1" />

            <EditText
                android:id="@+id/input_cap_time_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoText="false"
                android:ems="10"
                android:hint="optional - (default) Length of clip"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="14sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <!-- CLASSIFIER SETTINGS -->

        <TextView
            android:id="@+id/classifier_setting_heading_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/classifier_settings_title"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="@color/heading_2"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_classifier_num_iters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classifier_num_iters"
                android:textColor="@color/heading_1" />

            <EditText
                android:id="@+id/input_classifier_num_iters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoText="false"
                android:ems="10"
                android:hint="5"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="14sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />


        <!-- PLOTTING SECTION -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plotting_heading_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plotting_title"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textColor="@color/heading_2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_progress_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/progress_indicator_string"
                android:textAlignment="viewStart"
                android:textColor="@color/heading_2"
                android:textStyle="italic" />


        </LinearLayout>

        <TextView
            android:id="@+id/view_plotting_time_domain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plotting_time_domain"
            android:textColor="@color/heading_1"
            android:visibility="invisible" />


        <ImageView
            android:id="@+id/imageView0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/view_plotting_spectrogram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plotting_spectrogram"
            android:textColor="@color/heading_1"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/view_plotting_timeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plotting_annotated_timeline"
            android:textColor="@color/heading_1"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.github.mikephil.charting.charts.ScatterChart
            android:id="@+id/plot"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="invisible"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />


        <!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="@dimen/text_margin"-->
<!--            android:text="@string/large_text" />-->

    </LinearLayout>
</androidx.core.widget.NestedScrollView>